--- a/index.html
+++ b/index.html
@@ -10,8 +10,34 @@
 </head>
 <body>
     <div class="container">
-    <h1>Hello World</h1>
-    <a href="" class="btn btn-primary">Click Me</a>
+    <h1>Chicago</h1>
+    <ul>
+        <li>
+            Friday 05:00
+        </li>
+        <li>
+            Clear
+        </li>
+    </ul>
+  <div class="row">
+      <div class="col-6">
+          <img src="https://ali-weather-app.netlify.app/images/sun.png" alt="Clear"/>
+      12°C | °F
+        </div>
+        <div class="col-6">
+            <ul>
+                <li>
+                    Precipitation: 0%
+                </li>
+                <li>
+                    Humidity: 73%
+                </li>
+                <li>
+                    Wind: 2km/h
+                </li>
+            </ul>
+        </div>
+  </div>  
 </div>
 <script src="src/app.js"></script>
 </body>
